LaravelでVue.jsを使えるようにした

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,13 @@ services:
       - MYSQL_PASSWORD=${DB_PASS}
       - MYSQL_ROOT_PASSWORD=${DB_PASS}
       - TZ=${TZ}
+    
+  node:
+    image: node:12.14-alpine
+    tty: true
+    volumes:
+      - ${PROJECT_PATH:-./src}:/work
+    working_dir: /work
 
 
 volumes:
