--- a/src/package.json
+++ b/src/package.json
@@ -11,11 +11,15 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "cross-env": "^5.1",
+        "cross-env": "^7.0.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue": "^2.6.11",
+        "vue-router": "^3.1.6",
+        "vue-spinner": "^1.0.3",
+        "vue-template-compiler": "^2.6.11"
     }
 }
